# qrlogin

./: .cproject  .gitignore  .gitmodules  .project  LICENSE  Makefile  Makefile.am  README.md  bootstrap.sh  configure.ac  install.sh  qrlogin-msvc2013.sln  qrlogin.sln  qrpass.vcproj  qrpass.vcxproj  uninstall.sh
building/: build_app.mk  build_lib.mk  common.mk  testfns.mk
conf/: client.html  qrlogind.conf  qrpass.conf
conf/apikeys/: developers.google.com
libs/: config.windows.h
qrpass/: .cproject  Makefile.am  qrlogin.sln  qrpass.vcproj
qrpass/conf/: qrpass.conf
qrpass/src/: RewritePath.h  SrvMain.h  signmsg.h
qrpass/src/coinClasses/: CoinKey.cpp
qrpass/www/: auth.css  auth.js  index.css
qrpass/www/lang/: cs.js  en.js
src/: RewritePath.cpp  RewritePath.h  SrvMain.cpp  SrvMain.h  signmsg.cpp  signmsg.h
src/coinClasses/: .sources.mk  Base58Check.h  CoinKey.h
www/: auth.css  auth.html  auth.js  bitcoinsig.js  challenge.html  identreset.html  index.css  index.html  libs.js  loginfailed.html  loginok.html  manage.html  mobile_styles.css  mobileapp.js  msign.html  print.css  print.html  restore.html  secure-random.js  sign.html  spinnerpage.html
www/genpwd/: index.html  styles.css
www/genpwd/libs/: bitcoinsig.js  qrcode.js
www/lang/: cs.js  en.js
www/libs/: common.js  qrlogin-crypto.js
